H3CIPMSJAVA-20180830/src/objects/T_M__c.object
<CustomObject>
    <fields>
        <fullName>Additional_fees_charges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Fees/charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Location of Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCSorISS__c</fullName>
        <label>BCS OR ISS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>ISS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Account_Address__c</fullName>
        <label>Billing Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <label>Billing Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>报价太高</fullName>
                </value>
                <value>
                    <fullName>设备已报废</fullName>
                </value>
                <value>
                    <fullName>流程复杂</fullName>
                </value>
                <value>
                    <fullName>故障已修复</fullName>
                </value>
                <value>
                    <fullName>无法联系到客户</fullName>
                </value>
                <value>
                    <fullName>单独购买备件</fullName>
                </value>
                <value>
                    <fullName>报价单超期</fullName>
                </value>
                <value>
                    <fullName>客户询价</fullName>
                </value>
                <value>
                    <fullName>其它</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>used to send notification to CaseOwner</description>
        <label>CaseOwner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>T_MlookuptoCaseOwenerUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Creator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Creator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>T_M</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Casenumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>T&amp;M</relationshipLabel>
        <relationshipName>T_MLookUpCaseID</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Province__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>安徽-安庆</fullName>
                </value>
                <value>
                    <fullName>安徽-蚌埠</fullName>
                </value>
                <value>
                    <fullName>安徽-亳州</fullName>
                </value>
                <value>
                    <fullName>安徽-巢湖</fullName>
                </value>
                <value>
                    <fullName>安徽-池州</fullName>
                </value>
                <value>
                    <fullName>安徽-滁州</fullName>
                </value>
                <value>
                    <fullName>安徽-阜阳</fullName>
                </value>
                <value>
                    <fullName>安徽-合肥</fullName>
                </value>
                <value>
                    <fullName>安徽-淮北</fullName>
                </value>
                <value>
                    <fullName>安徽-淮南</fullName>
                </value>
                <value>
                    <fullName>安徽-黄山</fullName>
                </value>
                <value>
                    <fullName>安徽-六安</fullName>
                </value>
                <value>
                    <fullName>安徽-马鞍山</fullName>
                </value>
                <value>
                    <fullName>安徽-其它城市</fullName>
                </value>
                <value>
                    <fullName>安徽-铜陵</fullName>
                </value>
                <value>
                    <fullName>安徽-芜湖</fullName>
                </value>
                <value>
                    <fullName>安徽-宣城</fullName>
                </value>
                <value>
                    <fullName>澳门</fullName>
                </value>
                <value>
                    <fullName>北京市</fullName>
                </value>
                <value>
                    <fullName>重庆市</fullName>
                </value>
                <value>
                    <fullName>重庆市-北碚区</fullName>
                </value>
                <value>
                    <fullName>重庆市-璧山</fullName>
                </value>
                <value>
                    <fullName>重庆市-长寿区</fullName>
                </value>
                <value>
                    <fullName>重庆市-城口县</fullName>
                </value>
                <value>
                    <fullName>重庆市-大足县</fullName>
                </value>
                <value>
                    <fullName>重庆市-垫江县</fullName>
                </value>
                <value>
                    <fullName>重庆市-丰都</fullName>
                </value>
                <value>
                    <fullName>重庆市-奉节</fullName>
                </value>
                <value>
                    <fullName>重庆市-合川市</fullName>
                </value>
                <value>
                    <fullName>重庆市-江北区</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consulting_Quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consulting Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer_Email__c</fullName>
        <label>Engineer Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer_Phone__c</fullName>
        <label>Engineer Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engineer__c</fullName>
        <label>Engineer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fast_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fast Delivery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Final_Account__c</fullName>
        <label>End user Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstDiagnosing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Cost  L1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISS_Trade__c</fullName>
        <label>ISS Trade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>单次维修报价已签订</fullName>
                </value>
                <value>
                    <fullName>与客户谈单阶段</fullName>
                </value>
                <value>
                    <fullName>销售在跟进</fullName>
                </value>
                <value>
                    <fullName>7*24维保合同已签订</fullName>
                </value>
                <value>
                    <fullName>NBD维保合同已签订</fullName>
                </value>
                <value>
                    <fullName>取消服务</fullName>
                </value>
                <value>
                    <fullName>Fast Delivery</fullName>
                </value>
                <value>
                    <fullName>GA Trust Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Normal_T_M__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Normal T&amp;M</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Others__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PN__c</fullName>
        <label>Product Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>POP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Province</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anhui</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Chongqing</fullName>
                </value>
                <value>
                    <fullName>Fujian</fullName>
                </value>
                <value>
                    <fullName>Gansu</fullName>
                </value>
                <value>
                    <fullName>Guangdong</fullName>
                </value>
                <value>
                    <fullName>Guangxi</fullName>
                </value>
                <value>
                    <fullName>Guizhou</fullName>
                </value>
                <value>
                    <fullName>Hainan</fullName>
                </value>
                <value>
                    <fullName>Hebei</fullName>
                </value>
                <value>
                    <fullName>Heilongjiang</fullName>
                </value>
                <value>
                    <fullName>Henan</fullName>
                </value>
                <value>
                    <fullName>Hongkong</fullName>
                </value>
                <value>
                    <fullName>Hubei</fullName>
                </value>
                <value>
                    <fullName>Hunan</fullName>
                </value>
                <value>
                    <fullName>Jiangsu</fullName>
                </value>
                <value>
                    <fullName>Jiangxi</fullName>
                </value>
                <value>
                    <fullName>Jilin</fullName>
                </value>
                <value>
                    <fullName>Liaoning</fullName>
                </value>
                <value>
                    <fullName>Macao</fullName>
                </value>
                <value>
                    <fullName>Neimenggu</fullName>
                </value>
                <value>
                    <fullName>Ningxia</fullName>
                </value>
                <value>
                    <fullName>Qinghai</fullName>
                </value>
                <value>
                    <fullName>Shaanxi</fullName>
                </value>
                <value>
                    <fullName>Shandong</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shanxi</fullName>
                </value>
                <value>
                    <fullName>Shenzhen</fullName>
                </value>
                <value>
                    <fullName>Sichuan</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quote_Status__c</fullName>
        <label>Quotation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>报价申请已发出</fullName>
                </value>
                <value>
                    <fullName>报价已生成</fullName>
                </value>
                <value>
                    <fullName>等待用户确认</fullName>
                </value>
                <value>
                    <fullName>等待FD审批</fullName>
                </value>
                <value>
                    <fullName>报价过期关闭</fullName>
                </value>
                <value>
                    <fullName>报价确认生效</fullName>
                </value>
                <value>
                    <fullName>报价被拒绝/取消维修</fullName>
                </value>
                <value>
                    <fullName>Quotation created</fullName>
                    <isActive>false</isActive>
                    <label>Quotation created</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Qutationtype__c</fullName>
        <formula>IF( DMR__c==true , &apos;DMR&apos;,IF( Normal_T_M__c==True, &apos;Normal T&amp;M&apos;, IF(Contract__c==True ,&apos;Contract&apos;, IF( POP__c ==True, &apos;POP&apos;, IF( Others__c==True ,&apos;Others&apos;,&apos;&apos;)))) )</formula>
        <label>Qutationtype</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <label>Diagnostic Results</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SN__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Email__c</fullName>
        <label>Sales Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Name__c</fullName>
        <label>Sales Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Phone__c</fullName>
        <label>Sales Phone</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondDiagnosing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Cost  L2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suggested_Working_Hours__c</fullName>
        <label>Suggested Working Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>T_M_Amount__c</fullName>
        <label>T&amp;M Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_M_Contact__c</fullName>
        <label>T&amp;M Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ThirdDiagnosing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diagnostic Cost  L3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trouble_Description__c</fullName>
        <label>Issue</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Urgent_fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Fees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Working_Hours__c</fullName>
        <label>Labor</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hasSubmited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>hasSubmited</label>
        <type>Checkbox</type>
    </fields>
    <label>T&amp;M</label>
    <nameField>
        <displayFormat>TM-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>T&amp;M No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CancelReasonRequired</fullName>
        <active>true</active>
        <description>CancelReasonRequired if this value equals cancel</description>
        <errorConditionFormula>AND
( ISPICKVAL(ISS_Trade__c, &apos;取消服务&apos;),
   ISPICKVAL( Cancel_Reason__c,&apos;&apos; ) 
)</errorConditionFormula>
        <errorDisplayField>Cancel_Reason__c</errorDisplayField>
        <errorMessage>Cancel reason is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LaborIsRequired</fullName>
        <active>true</active>
        <description>在勾选Contract和DMR时候可以不填Labor数值，当勾选其它三个选项时Labor为必填项</description>
        <errorConditionFormula>ISNULL(Working_Hours__c ) 
&amp;&amp; (Fast_Delivery__c == true || POP__c == true 
||Normal_T_M__c == true)</errorConditionFormula>
        <errorDisplayField>Working_Hours__c</errorDisplayField>
        <errorMessage>Labor is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Qutationtype</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(Contract__c==true,OR(DMR__c==true,POP__c==true,Others__c==true,Normal_T_M__c==true)), 
	AND(DMR__c==true,OR(Contract__c==true,POP__c==true,Others__c==true,Normal_T_M__c==true)),
	AND(POP__c==true,OR(DMR__c==true,Contract__c==true,Others__c==true,Normal_T_M__c==true)),
	AND(Others__c==true,OR(DMR__c==true,POP__c==true,Contract__c==true,Normal_T_M__c==true)),
	AND(Normal_T_M__c==true,OR(DMR__c==true,POP__c==true,Others__c==true,Contract__c==true)))</errorConditionFormula>
        <errorMessage>You Can Only Choose One Quotation Type!</errorMessage>
    </validationRules>
</CustomObject>